Added models and login complted

--- a/Home/templates/home/register.html
+++ b/Home/templates/home/register.html
@@ -11,7 +11,7 @@
     <h1 style="text-align:center">Designer's Adda</h1>
     <h1 style="text-align:center">Who Are You....?</h1>
     <div style="text-align:center">
-        <button><a href="">User</a></button>
+        <button><a href="/home/user_register/">User</a></button>
         <button><a href="">Designer</a></button>
     </div>
 </body>
