--- a/Home/templates/home/success.html
+++ b/Home/templates/home/success.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="text-align:center">Welcome to Designer's Adda</h1>
-    <div style="text-align:center">
+    <div style='text-align:center'>
+        <h1>User Successfully Register</h1>
+        <h1>Please Login</h1>
         <button><a href="/home/login/">Login</a></button>
-        <button><a href="/home/register/">Register</a></button>
     </div>
 </body>
 </html>
