added designer app and make some changes in home app

--- a/Home/templates/home/register.html
+++ b/Home/templates/home/register.html
@@ -12,7 +12,7 @@
     <h1 style="text-align:center">Who Are You....?</h1>
     <div style="text-align:center">
         <button><a href="/home/user_register/">User</a></button>
-        <button><a href="">Designer</a></button>
+        <button><a href="/designer/register/">Designer</a></button>
     </div>
 </body>
 </html>
