--- a/designer/templates/designer/business_details.html
+++ b/designer/templates/designer/business_details.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Registered</title>
 </head>
 <body>
-    <h1>User Registration</h1>
-    <form method="POST" enctype="multipart/form-data">
+    <h1>Designer Registered Successfully</h1>
+    <h2>Please Add Your Business Details</h2>
+    <form method="POST">
         <div>
             {% csrf_token %}
             {{ form.as_p }}
-
-            <button type="submit">Register</button>
+            <button type="submit">Add Business Details</button>
         </div>
     </form>
 </body>
