--- a/designer/templates/designer/designer_register.html
+++ b/designer/templates/designer/designer_register.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Designer's Registration</title>
 </head>
 <body>
-    <h1>User Registration</h1>
+    <h1>Designer's Registration Form</h1>
     <form method="POST" enctype="multipart/form-data">
         <div>
             {% csrf_token %}
