Added product app with multi-image support for each designer's designs

--- a/Home/templates/home/user_register.html
+++ b/Home/templates/home/user_register.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>User Registration</title>
+    <link rel="stylesheet" href="{% static 'css/register.css' %}">
 </head>
 <body>
-    <h1>User Registration</h1>
-    <form method="POST" enctype="multipart/form-data">
-        <div>
-            {% csrf_token %}
-            {{ form.as_p }}
-
-            <button type="submit">Register</button>
+    <div class="container">
+        <div class="form-box">
+            <h1>User Registration</h1>
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Register</button>
+            </form>
         </div>
-    </form>
+    </div>
 </body>
 </html>
