--- a/Home/templates/home/home_page.html
+++ b/Home/templates/home/home_page.html
@@ -170,7 +170,7 @@
     <header>
         <h2>Designer’s Adda</h2>
         <nav>
-            <a href="/home/">Home</a>
+            <a href="/">Home</a>
             <a href="#designers">Designers</a>
             <a href="#products">Shop</a>
             <a href="/about/">About Us</a>
