--- a/Home/templates/home/success.html
+++ b/Home/templates/home/success.html
@@ -9,7 +9,7 @@
     <div style='text-align:center'>
         <h1>User Successfully Register</h1>
         <h1>Please Login</h1>
-        <button><a href="/home/login/">Login</a></button>
+        <button><a href="/login/">Login</a></button>
     </div>
 </body>
 </html>
