--- a/designer/templates/designer/about.html
+++ b/designer/templates/designer/about.html
@@ -107,13 +107,12 @@
     <header>
         <h2>Designer’s Adda</h2>
         <nav>
-            <a href="/">Home</a>
+            <a href="/designer/home/">Home</a>
             <a href="#designers">Designers</a>
-            <a href="#products">Shop</a>
-            <a href="/about/">About Us</a>
-            <a href="/contact/">Contact</a>
-            <a href="/login/">Login</a>
-            <a href="/user_register/">Register</a>
+            <a href="/products/details/">Your Products</a>
+            <a href="/products/form/">Upload Products</a>
+            <a href="/designer/about/">About Us</a>
+            <a href="/designer/profile/">Profile</a>
         </nav>
     </header>
 
