--- a/user/templates/user/about.html
+++ b/user/templates/user/about.html
@@ -107,13 +107,12 @@
     <header>
         <h2>Designer’s Adda</h2>
         <nav>
-            <a href="/">Home</a>
+            <a href="/user/home/">Home</a>
             <a href="#designers">Designers</a>
             <a href="#products">Shop</a>
-            <a href="/about/">About Us</a>
-            <a href="/contact/">Contact</a>
-            <a href="/login/">Login</a>
-            <a href="/user_register/">Register</a>
+            <a href="/user/about/">About Us</a>
+            <a href="/order/">Orders</a>
+            <a href="/user/profile/{{user.id}}/">Profile</a>
         </nav>
     </header>
 
