--- a/designer/templates/designer/designers_home.html
+++ b/designer/templates/designer/designers_home.html
@@ -175,7 +175,8 @@
             <a href="/products/details/">Your Products</a>
             <a href="/products/form/">Upload Products</a>
             <a href="/designer/about/">About Us</a>
-            <a href="/designer/profile/">Profile</a>
+            <a href="/logout_confirm/">Log-out</a>
+            <a href="/designer/profile/{{ user.id }}">Profile</a>
         </nav>
     </header>
 
