--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -175,6 +175,7 @@
             <a href="#products">Shop</a>
             <a href="/user/about/">About Us</a>
             <a href="/order/">Orders</a>
+            <a href="/logout_confirm/">Log-out</a>
             <a href="/user/profile/{{user.id}}/">Profile</a>
         </nav>
     </header>
