--- a/user/templates/user/home.html
+++ b/user/templates/user/home.html
@@ -171,8 +171,8 @@
         <h2>Designer’s Adda</h2>
         <nav>
             <a href="/user/home/">Home</a>
-            <a href="#designers">Designers</a>
-            <a href="#products">Shop</a>
+            <a href="/designer/all_designers/">Designers</a>
+            <a href="/products/list/">Shop</a>
             <a href="/user/about/">About Us</a>
             <a href="/order/">Orders</a>
             <a href="/logout_confirm/">Log-out</a>
