--- a/Home/templates/home/about.html
+++ b/Home/templates/home/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About - Designer’s Adda</title>
+    <title>About</title>
     <style>
         * {
             margin: 0;
