--- a/Home/templates/home/delete.html
+++ b/Home/templates/home/delete.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Designer’s Adda</title>
+    <title>Profile Delete</title>
     <style>
         * {
             margin: 0;
