--- a/designer/templates/designer/designers_home.html
+++ b/designer/templates/designer/designers_home.html
@@ -171,7 +171,7 @@
         <h2>Designer’s Adda</h2>
         <nav>
             <a href="/designer/home/">Home</a>
-            <a href="#designers">Designers</a>
+            <a href="/designer/all_designers/">Designers</a>
             <a href="/products/details/">Your Products</a>
             <a href="/products/form/">Upload Products</a>
             <a href="/designer/about/">About Us</a>
