--- a/products/templates/products/all_products.html
+++ b/products/templates/products/all_products.html
@@ -138,7 +138,7 @@
                         <img src="{{ image.product_image.url }}" alt="{{ product.product_name }}">
                     {% endif %}
                 {% endwith %}
-                <h3>{{ product.product_name }}</h3>
+                <h3><a href="/products/info/{{product.id}}/">{{ product.product_name }}</a></h3>
                 <p>{{ product.product_description }}</p>
                 <p><strong>Price:</strong> ₹{{ product.product_price }}</p>
             </div>
