Added delivery boy app and orders app, add to cart and view cart feature

--- a/products/templates/products/product_info.html
+++ b/products/templates/products/product_info.html
@@ -105,6 +105,7 @@
         <p>{{ product.product_description }}</p>        
         <p>{{ product.product_category }}</p>
         <p>{{ product.product_price }}</p>
+        <button><a href="/orders/add_to_cart/{{product.id}}/">Add To Cart</a></button>
     </div>
 </body>
 </html>
