--- a/delivery_boy/templates/delivery_boy/home.html
+++ b/delivery_boy/templates/delivery_boy/home.html
@@ -170,13 +170,13 @@
     <header>
         <h2>Designer’s Adda</h2>
         <nav>
-            <a href="/user/home/">Home</a>
+            <a href="/delivery_boy/home/">Home</a>
             <a href="/designer/all_designers/">Designers</a>
             <a href="/products/list/">Shop</a>
-            <a href="/user/about/">About Us</a>
-            <a href="/user/order/">Orders</a>
+            <a href="/delivery_boy/deliveries/">Deliveries</a>
+            <a href="/delivery_boy/about/">About Us</a>
             <a href="/logout_confirm/">Log-out</a>
-            <a href="/user/profile/{{user.id}}/">Profile</a>
+            <a href="/delivery_boy/profile/{{ user.id }}/">Profile</a>
         </nav>
     </header>
 
@@ -187,7 +187,7 @@
 
     <!-- Product Showcase -->
     <section class="section" id="products">
-        <h2>Featured Products</h2>
+        <h2>All Deliveries</h2>
         <div class="product-grid">
             <div class="card glass">
                 <img src="{% static 'images/Short_Skirt.jpeg' %}" alt="">
@@ -209,7 +209,7 @@
 
     <!-- Designer Showcase -->
     <section class="section" id="designers">
-        <h2>Meet the Designers</h2>
+        <h2>Pending Deliveries</h2>
         <div class="designer-grid">
             <div class="card glass">
                 <img src="{% static 'designers/Snehalata_jain.jpg' %}" alt="">
@@ -231,7 +231,7 @@
 
     <!-- Testimonials -->
     <section class="section" id="testimonials">
-        <h2>What Our Customers Say</h2>
+        <h2>Your Customers</h2>
         <div class="testimonial-grid">
             <div class="card glass">
                 <p>"Absolutely stunning collection! Got so many compliments for my outfit!"</p>
