--- a/user/templates/user/orders.html
+++ b/user/templates/user/orders.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <button><a href="/orders/view_cart/{{user.id}}/"></a></button>
+    <button><a href="/orders/view_cart/{{user.id}}/">View Cart</a></button>
 </body>
 </html>
