--- a/user/templates/user/base.html
+++ b/user/templates/user/base.html
@@ -186,7 +186,7 @@
             <a href="/designer/all_designers/">Designers</a>
             <a href="/products/list/">Shop</a>
             <a href="/user/about/">About Us</a>
-            <a href="/user/order/">Orders</a>
+            <a href="/orders/order_history/{{ user.id }}/">Orders</a>
             <a href="/orders/view_cart/{{ user.id }}/">Cart</a>
             <a href="/logout_confirm/">Log-out</a>
             <a href="/user/profile/{{ user.id }}/">Profile</a>
