--- a/designer/templates/designer/base.html
+++ b/designer/templates/designer/base.html
@@ -183,7 +183,7 @@
         <h2>Designer’s Adda</h2>
         <nav>
             <a href="/designer/home/">Home</a>
-            <a href="/products/details/">Your Products</a>
+            <a href="/designer/products/{{ user.id }}">Your Products</a>
             <a href="/products/form/">Upload Products</a>
             <a href="/designer/about/">About Us</a>
             <a href="/logout_confirm/">Log-out</a>
