--- a/designer/templates/designer/designer_products.html
+++ b/designer/templates/designer/designer_products.html
@@ -1,4 +1,4 @@
-{% extends "user/base.html" %}
+{% extends "designer/base.html" %}
 {% load static %}
 
 {% block title %}All Products - Designer’s Adda{% endblock %}
@@ -59,7 +59,7 @@
 {% block content %}
 <!-- Products Showcase -->
 <section class="section" id="designers">
-    <h2>Our Products</h2>
+    <h2>Your Products</h2>
     <div class="designer-grid">
         {% for product in productdetailsmodel_list %}
         <div class="card glass">
@@ -68,7 +68,7 @@
                     <img src="{{ image.product_image.url }}" alt="{{ product.product_name }}">
                 {% endif %}
             {% endwith %}
-            <h3><a href="/products/info/{{product.id}}/">{{ product.product_name }}</a></h3>
+            <h3><a href="/designer/product/info/{{product.id}}/">{{ product.product_name }}</a></h3>
             <p>{{ product.product_description }}</p>
             <p><strong>Price:</strong> ₹{{ product.product_price }}</p>
         </div>
