User to designer switching done.

--- a/user/templates/user/customuser_detail.html
+++ b/user/templates/user/customuser_detail.html
@@ -139,6 +139,7 @@
         <div class="btn-group">
             <a href="/user/update/{{user.id}}/" class="update-btn">Update Profile</a>
             <a href="/delete/{{user.id}}/" class="delete-btn">Delete Account</a>
+            <a href="/designer/register/{{ user.id }}" class="delete-btn">Are you a Designer..? Register As Designer</a>
         </div>
     </div>
 </body>
