--- a/designer/templates/designer/base.html
+++ b/designer/templates/designer/base.html
@@ -183,11 +183,11 @@
         <h2>Designer’s Adda</h2>
         <nav>
             <a href="/designer/home/">Home</a>
-            <a href="/designer/products/{{ user.id }}">Your Products</a>
+            <a href="/designer/products/{{ designer.id }}">Your Products</a>
             <a href="/products/form/">Upload Products</a>
             <a href="/designer/about/">About Us</a>
             <a href="/logout_confirm/">Log-out</a>
-            <a href="/designer/profile/{{ user.id }}/">Profile</a>
+            <a href="/designer/profile/{{ designer.id }}/">Profile</a>
         </nav>
     </header>
 
