--- a/designer/templates/designer/business_details.html
+++ b/designer/templates/designer/business_details.html
@@ -29,7 +29,6 @@
             100% { background-position: 0% 50%; }
         }
         .mainBody {
-            center:"true";
             justify-content: center;
             align-items: center;
             background-image: url('{% static "images/coloured_background.jpg" %}');
@@ -41,7 +40,6 @@
         .container {
             display: flex;
             justify-content: center;
-            center:"true";
         }
 
         .register-box {
@@ -148,7 +146,7 @@
     <div class="container">
         <div class="register-box">
             <h2>Enter Your Boutique Details</h2>
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
                     <div class="form-group">
