--- a/products/templates/products/success.html
+++ b/products/templates/products/success.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Logout - Designer’s Adda</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        body {
+            background-image : url('{% static 'images/coloured_background.jpg' %}');
+            background-size: cover;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .login-box {
+            background-color: white;
+            padding: 3rem 2rem;
+            border-radius: 20px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            text-align: center;
+            max-width: 400px;
+            width: 100%;
+        }
+
+        .login-box h2 {
+            font-size: 1.8rem;
+            margin-bottom: 1rem;
+            color: #00796b;
+        }
+
+        .login-box button {
+            padding: 0.8rem 2rem;
+            background-color: #00acc1;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            font-size: 1rem;
+            cursor: pointer;
+            margin-top: 1.5rem;
+            transition: background 0.3s ease;
+        }
+
+        .login-box button:hover {
+            background-color: #0097a7;
+        }
+
+        .btn-link {
+            display: inline-block;
+            padding: 0.8rem 2rem;
+            background-color: #00acc1;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            font-size: 1rem;
+            cursor: pointer;
+            margin-top: 1.5rem;
+            text-decoration: none;
+            transition: background 0.3s ease;
+        }
+        
+        .btn-link:hover {
+            background-color: #0097a7;
+        }
+        
+    </style>
 </head>
+
 <body>
-    <h2>Product Saved Successfully</h2>
+    <!-- Login Form -->
+    <div class="login-box">
+        <h2>Product Saved Successfully</h2>
+        <a href="/designer/home/{{designer.id}}" class="btn-link">Go to home page</a>
+    </div>
 </body>
 </html>
